@@ -53,6 +53,12 @@
   "ui.dacxirons.amplifier": "%d Max Effect Level",
   "spell.dacxirons.fairys_wish_spell": "Fairy's Wish",
   "item.dacxirons.sanguine_scepter_staff": "Sanguine Scepter",
-  "spell.dacxirons.bloody_arrow": "Bloody Arrow"
+  "spell.dacxirons.bloody_arrow": "Bloody Arrow",
+  "ui.dacxirons.duration2": "%ds Duration",
+  "ui.dacxirons.healthreduction": "%d Percent Health Reduction",
+  "spell.dacxirons.crimson_oath" : "Crimson Oath",
+  "spell.dacxirons.bloody_arrow.guide": "Projectile full of dread and gore, inflicts bleeding",
+  "spell.dacxirons.crimson_oath.guide": "Reduce your health critically and beging to bleed, but your power grows exponentially",
+  "ui.dacxirons.bloodpower": "%d Percent Blood Power"
 }
 
